--- a/index.Rmd
+++ b/index.Rmd
@@ -310,15 +310,16 @@ look at posterior distributions:
 
 ## When are Bayesian models useful?
 
-* Importantly, it has to run without errors, not all problems "work"
-* Bayes estimators converge to MLE as $n \to \infty$, so small $n$
-* Or, small $n$ / higher SNR for *some* groups
-* Example: some schools have not much data, some regions have few schools
-* Or, sharing information for estimating mid-level parameters, e.g. $V_\mu$
+<br>
+
+> - Bayes estimators converge to MLE as $n \to \infty$, so small $n$
+> - Or, small $n$, higher variance for *some* groups
+> - E.g. some regions having only a few schools
+> - Or, sharing information on mid-level parameters, e.g. $V_\mu$
 
 ## BHM in genomics
 
-* limma, edgeR, DESeq2/apeglm
+* limma, edgeR, DESeq2, apeglm
 * These are *empirical Bayes*, don't involve MCMC
 
 <center>
@@ -333,15 +334,7 @@ look at posterior distributions:
 
 <center>
 <img src="chatt1.png"><br>
-$\dots$
-</center>
-
-<center>
 <img src="chatt2.png"><br>
-$\dots$ 
-</center>
-
-<center>
 <img src="chatt3.png">
 </center>
 
@@ -364,14 +357,13 @@ determining ... binding* [NAR](https://academic.oup.com/nar/article/45/4/1805/26
 
 ## BHM applied to neuronal assays in Stein lab
 
-What do we gain over a more heuristic alternative?
-
-* **MR Locus**
+- MR Locus
     - aim: estimate the strength of signal for $\uparrow$ eQTL, $\uparrow$ GWAS
     - heuristic: condition analysis, $\beta$-eCAVIAR, threshold on $\beta$, simple linear regression
     - the mixture model for small / large effects obviates need to threshold
     - include uncertainty on the $\beta$ (?)
-* **pathQTL**
+
+- pathQTL
     - aim: cell-type specific mediation paths, incorporate multiple layers
     - heuristic: mediation on cell types separately
     - similar to the TF binding case, focus on cell-type diffs
